# Machine-Learning-Specialization-Coursera

./: pyproject.toml
C1 - Supervised Machine Learning - Regression and Classification/week2/C1W2A1/: C1_W2_Linear_Regression.ipynb
C1 - Supervised Machine Learning - Regression and Classification/x week1/x Optional Labs/: x C1_W1_Lab03_Model_Representation_Soln.ipynb
C1 - Supervised Machine Learning - Regression and Classification/x week2/x Optional Labs/: x C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb
C2 - Advanced Learning Algorithms/week3/C2W3A1/: C2_W3_Assignment.ipynb
C2 - Advanced Learning Algorithms/x week1/x optional-labs/: x C2_W1_Lab01_Neurons_and_Layers.ipynb  x C2_W1_Lab02_CoffeeRoasting_TF.ipynb
C2 - Advanced Learning Algorithms/x week2/x optional-labs/: x C2_W2_SoftMax.ipynb
x C1 - Supervised Machine Learning - Regression and Classification/x week1/x Optional Labs/: x C1_W1_Lab04_Cost_function_Soln.ipynb
x C1 - Supervised Machine Learning - Regression and Classification/x week2/x C1W2A1/: x C1_W2_Linear_Regression.ipynb
x C1 - Supervised Machine Learning - Regression and Classification/x week2/x Optional Labs/: x C1_W2_Lab02_Multiple_Variable_Soln.ipynb
x C1 - Supervised Machine Learning - Regression and Classification/x week3/x C1W3A1/: x C1_W3_Logistic_Regression.ipynb
x C1 - Supervised Machine Learning - Regression and Classification/x week3/x Optional Labs/: x C1_W3_Lab06_Gradient_Descent_Soln.ipynb
x C2 - Advanced Learning Algorithms/week4/C2W4A1/: C2_W4_Decision_Tree_with_Markdown.ipynb
(+7 files in other folders)
